// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FirstUser /> should render 1`] = `
<Container__WallContainer>
  <FirstUser__FirstUserDialog>
    <FirstUser__FirstUserDialogHeader>
      <h2>
        Setup User
      </h2>
      <p>
        Create an initial administrative user to start using Virtool.
      </p>
    </FirstUser__FirstUserDialogHeader>
    <FirstUser__FirstUserDialogBody>
      <form
        onSubmit={[Function]}
      >
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            name="username"
            onChange={[Function]}
            value="bob"
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value="password"
          />
        </InputGroup>
        <Button
          color="blue"
          disabled={false}
          icon="user-plus"
          tipPlacement="top"
          type="submit"
        >
          Create User
        </Button>
      </form>
    </FirstUser__FirstUserDialogBody>
  </FirstUser__FirstUserDialog>
</Container__WallContainer>
`;

exports[`<FirstUser /> should render when "password" changed 1`] = `
<Container__WallContainer>
  <FirstUser__FirstUserDialog>
    <FirstUser__FirstUserDialogHeader>
      <h2>
        Setup User
      </h2>
      <p>
        Create an initial administrative user to start using Virtool.
      </p>
    </FirstUser__FirstUserDialogHeader>
    <FirstUser__FirstUserDialogBody>
      <form
        onSubmit={[Function]}
      >
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            name="username"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value="password"
          />
        </InputGroup>
        <Button
          color="blue"
          disabled={false}
          icon="user-plus"
          tipPlacement="top"
          type="submit"
        >
          Create User
        </Button>
      </form>
    </FirstUser__FirstUserDialogBody>
  </FirstUser__FirstUserDialog>
</Container__WallContainer>
`;

exports[`<FirstUser /> should render when "username" changed 1`] = `
<Container__WallContainer>
  <FirstUser__FirstUserDialog>
    <FirstUser__FirstUserDialogHeader>
      <h2>
        Setup User
      </h2>
      <p>
        Create an initial administrative user to start using Virtool.
      </p>
    </FirstUser__FirstUserDialogHeader>
    <FirstUser__FirstUserDialogBody>
      <form
        onSubmit={[Function]}
      >
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            name="username"
            onChange={[Function]}
            value="bob"
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <Button
          color="blue"
          disabled={false}
          icon="user-plus"
          tipPlacement="top"
          type="submit"
        >
          Create User
        </Button>
      </form>
    </FirstUser__FirstUserDialogBody>
  </FirstUser__FirstUserDialog>
</Container__WallContainer>
`;
